// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: ActionList Anchorpoints renders 1`] = `
<Fragment>
  <h2
    id="anchorpoints"
  >
    Anchorpoints
  </h2>
  <p>
    You can change where the action list will have its anchor, by default the anchor will be top right.
  </p>
  <h3>
    Top left
  </h3>
  <p>
    Use class 
    <Tag
      code={true}
      text=".anchor-top-left"
      type="secondary"
    />
     to anchor action-list button to the top left corner of the menu.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionList
      classNames="anchor-top-left"
      items={
        Array [
          Object {
            "icon": "bookmark",
            "name": "Add bookmark",
          },
          Object {
            "icon": "business_center",
            "name": "Add client",
          },
          Object {
            "icon": "add_circle",
            "name": "Add document",
          },
          Object {
            "icon": "person_add",
            "name": "Add user",
          },
        ]
      }
    />
  </ComponentPreview>
  <h3>
    Bottom right
  </h3>
  <p>
    Use class 
    <Tag
      code={true}
      text=".anchor-bottom-right"
      type="secondary"
    />
     to anchor action-list button to the bottom right corner of the menu.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionList
      classNames="anchor-bottom-right"
      items={
        Array [
          Object {
            "icon": "bookmark",
            "name": "Add bookmark",
          },
          Object {
            "icon": "business_center",
            "name": "Add client",
          },
          Object {
            "icon": "add_circle",
            "name": "Add document",
          },
          Object {
            "icon": "person_add",
            "name": "Add user",
          },
        ]
      }
    />
  </ComponentPreview>
  <h3>
    Bottom left
  </h3>
  <p>
    Use class 
    <Tag
      code={true}
      text=".anchor-bottom-left"
      type="secondary"
    />
     to anchor action-list button to the bottom left corner of the menu.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionList
      classNames="anchor-bottom-left"
      items={
        Array [
          Object {
            "icon": "bookmark",
            "name": "Add bookmark",
          },
          Object {
            "icon": "business_center",
            "name": "Add client",
          },
          Object {
            "icon": "add_circle",
            "name": "Add document",
          },
          Object {
            "icon": "person_add",
            "name": "Add user",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: ActionList JavascriptMethods renders 1`] = `
<Fragment>
  <h2
    id="javascript-methods"
  >
    JavaScript methods
  </h2>
  <JavascriptDocs
    close={true}
    componentName="actionList"
    open={true}
  />
</Fragment>
`;

exports[`Components: ActionList Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    Action lists.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionList
      items={
        Array [
          Object {
            "icon": "bookmark",
            "name": "Add bookmark",
          },
          Object {
            "icon": "business_center",
            "name": "Add client",
          },
          Object {
            "icon": "add_circle",
            "name": "Add document",
          },
          Object {
            "icon": "person_add",
            "name": "Add user",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: ActionList renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Action lists are small menus that remain hidden until clicked. In these you can put page links or anchors that trigger an action elsewhere.
  </p>
  <Overview />
  <Anchorpoints />
  <JavascriptMethods />
  <NpmInformation
    componentName="actionList"
  />
</DocContainer>
`;
